[gd_scene load_steps=6 format=2]

[ext_resource path="res://classes/card/CardFactory.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://classes/card/RarityButton.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="root" type="Node2D"]
script = ExtResource( 1 )

[node name="Generation" type="SpinBox" parent="."]
margin_left = 20.0
margin_top = 16.0
margin_right = 94.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
min_value = 1.0
max_value = 3.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 20.0
margin_top = 82.0
margin_right = 271.0
margin_bottom = 134.0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 20.0
margin_top = 160.755
margin_right = 271.0
margin_bottom = 195.755
custom_fonts/font = SubResource( 2 )
text = "Gevonden kaart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="card_id" type="Label" parent="."]
margin_left = 324.794
margin_top = 160.755
margin_right = 575.794
margin_bottom = 195.755
custom_fonts/font = SubResource( 2 )
text = "Gevonden kaart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rarity" type="OptionButton" parent="."]
margin_left = 325.0
margin_top = 16.0
margin_right = 440.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GetImageRequest" type="HTTPRequest" parent="."]

[node name="Container" type="Container" parent="."]
margin_left = 20.0
margin_top = 217.324
margin_right = 620.0
margin_bottom = 1042.32
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="GetImageRequest" to="." method="_on_GetImageRequest_request_completed"]
